package app.domain.model;

/**
* @author Carlos Lopes <1211277@isep.ipp.pt>
*/
public class VaccineType {

    private String code;
    private String description;
    private String technology;
    
}
